@@ -54,7 +54,7 @@
  * @package System.Web.UI.WebControls
  * @since 3.0
  */
-class TLinkButton extends TWebControl implements IPostBackEventHandler
+class TLinkButton extends TWebControl implements IPostBackEventHandler, IButtonControl
 {
 	/**
 	 * @return string tag name of the button
@@ -130,7 +130,6 @@ class TLinkButton extends TWebControl implements IPostBackEventHandler
 	}
 
 	/**
-	 * Sets the text caption of the button.
 	 * @param string the text caption to be set
 	 */
 	public function setText($value)
@@ -147,8 +146,7 @@ class TLinkButton extends TWebControl implements IPostBackEventHandler
 	}
 
 	/**
-	 * Sets the command name associated with the {@link onCommand OnCommand} event.
-	 * @param string the text caption to be set
+	 * @param string the command name associated with the {@link onCommand OnCommand} event.
 	 */
 	public function setCommandName($value)
 	{
@@ -164,8 +162,7 @@ class TLinkButton extends TWebControl implements IPostBackEventHandler
 	}
 
 	/**
-	 * Sets the parameter associated with the {@link onCommand OnCommand} event.
-	 * @param string the text caption to be set
+	 * @param string the parameter associated with the {@link onCommand OnCommand} event.
 	 */
 	public function setCommandParameter($value)
 	{
